Se implementó el mostrar IP

--- a/pacman graphics/Makefile
+++ b/pacman graphics/Makefile
@@ -1,2 +1,2 @@
 main: main.cpp obtenerIP.h juego.cpp juego.h player1.cpp player2.cpp player3.cpp player4.cpp colision_jugadores.cpp score.cpp texturas.cpp colplayer.cpp
-	g++ main.cpp obtenerIP.h juego.cpp juego.h player1.cpp player2.cpp player3.cpp player4.cpp colision_jugadores.cpp score.cpp texturas.cpp colplayer.cpp -o main -lsfml-graphics -lsfml-audio -lsfml-window -lsfml-system
+	g++ main.cpp obtenerIP.h juego.cpp juego.h player1.cpp player2.cpp player3.cpp player4.cpp colision_jugadores.cpp score.cpp texturas.cpp colplayer.cpp -o main -lsfml-graphics -lsfml-audio -lsfml-window -lsfml-system -lsfml-network
